--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -3,7 +3,7 @@
 {% block title %}{{ title }} | {{ site_title|default:_('Polls_Django admin') }}{% endblock %}
 
 {% block branding %}
-<h1 id="site-name"><a href="{% url 'admin:index' %}">Polls Administration</a></h1>
+<h1 id="site-name"><a href="{% url 'admin:index' %}">PyBursa Administration</a></h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
