--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,28 @@
 		</p>
 	</div>
     </div>
+
+                <div class="table-responsive">
+                    <table class="table table-striped table-hover table-condensed">
+                        <thead>
+                            <tr>
+                                <th>Курс </th>
+                                <th>Описание </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for x in courses %}
+                            <tr>
+                                <td><a href="{% url 'courses:detail' x.id %}"><strong>{{ x.name }}</strong></a></td>
+                                <td>{{ x.short_description }}</td>
+                            </tr>   
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+           
+
+
     <div class="container">
     <ul class="pager">
         <li class="next"><a href="{% url 'contact' %}">Next <span class="glyphicon glyphicon-chevron-right"></span></a></li>
