--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -5,7 +5,7 @@
 <head>
    <meta charset="utf-8">
 	<meta name="description" content="PyBursa">
-	<title>{% block title %}Course {{ course.name }}{% endblock title %}</title>
+	<title>{% block title %}{{ coach.first_name }} {{ scoach.last_name }}{% endblock title %}</title>
 	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 	<link href="{% static 'css/style.css' %}" rel="stylesheet">
 	<script src="{% static 'js/bootstrap.min.js' %}"></script>
@@ -20,73 +20,69 @@
     </div>
     <ul class="nav navbar-nav">
       <li><a href="{% url 'index' %}">Main</a></li>
+      <li><a href="{% url 'contact' %}">Contacts</a></li>
       <li><a href="{% url 'students:list_view' %}">Students</a></li>
       <li><a href="{% url 'results'  %}">Quadratic</a></li>
     </ul>
   </div>
 </nav>
+    <div class="container">
+  
+{% block content %}
 
 
- <div class="container">
-        <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                <h2>{{ coach.user.first_name }} {{ coach.user.last_name }}</h2></div>
-        </div>
-        <hr>
-        <div class="col-md-8">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="table-responsive">
-                        <table class="table table-striped table-hover">
-                            <thead class="headtable">
-                                <tr>
-                                    <th colspan="2">Coach Card</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td class="active">Дата рождения</td>
-                                    <td>{{ coach.date_of_birth }}</td>
-                                </tr>
-                                <tr>
-                                    <td class="active">Адрес</td>
-                                    <td>{{ coach.address }}</td>
-                                </tr>
-                                <tr>
-                                    <td class="active">E-mail </td>
-                                    <td>{{ coach.user.email }}</td>
-                                </tr>
-                                <tr>
-                                    <td class="active">Skype </td>
-                                    <td>{{ coach.skype }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Phone</td>
-                                    <td>{{ coach.phone }}</td>
-                                </tr>
-                                <tr>
-                                    <td>Courses Coach</td>
-                                    <td> {% for course in teacher %}
-                                          <p><a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a><a href="{% url 'students:list_view' %}?course_id={{ course.id }}">студенты курса <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span></a></p>
-                                    {% endfor %}
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>Courses Assistant</td>
-                                    <td> {% for course in assistant %}
-                                          <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a>студенты курса<a href="{% url 'students:list_view' %}?course_id={{ course.id }}"><span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span><br></a>
-                                    {% endfor %}
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
+  <!-- Default panel contents -->
+<div class="container">
+   	<h2>{{coach.user.first_name}} {{ coach.user.last_name }}</h2>
+<div>
+      <div class="table-responsive">
+      <table class="table table-striped">
+        <tr>
+        	<th>дата рождения</th>
+        	<th>{{coach.date_of_birth}}</th>
+        </tr>
+        <tr>
+            <th>адрес</th>
+            <th>{{coach.address}}</th>
+        </tr>
+
+        <tr>
+            <th>почта</th>
+            <th>{{coach.email}}</th>
+        </tr>
+            <th>логин skype</th>
+            <th>{{coach.skype}}</th>
+        </tr>
+            <th>телефон</th>
+            <th>{{coach.phone}}</th>
+        </tr>
+            <th>Курсы учитель</th>
+             <td>{% for course in coach.coach_courses.all %}
+               <p><a href="{% url 'courses:detail' course.id %}">{{course.name}}</a>
+               студенты курса 
+               <a href="{% url 'students:list_view' %}?course_id={{course.id}}"><span class="glyphicon glyphicon-info-sign"></span></a>
+               </p>
+               {% endfor %}
+             </td>
+        </tr>        
+        </tr>
+            <th>Курсы ассистент</th>
+             <td>{% for course in coach.assistant_courses.all %}
+               <p><a href="{% url 'courses:detail' course.id %}">{{course.name}}</a>
+               студенты курса 
+               <a href="{% url 'students:list_view' %}?course_id={{course.id}}"><span class="glyphicon glyphicon-info-sign"></span></a>
+               </p>
+               {% endfor %}
+             </td>
+        </tr>        
+		
+      </table>   
     </div>
 
+{% endblock content %}
 
+
+</div>
     <div class="container">
     <ul class="pager">
         <li class="next"><a href="{% url 'contact' %}">Next <span class="glyphicon glyphicon-chevron-right"></span></a></li>
