--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -25,59 +25,59 @@
     </ul>
   </div>
 </nav>
-    <div class="container">
   
 
-<div class="row">
-            <div class="col-md-12">
-                <div class="page-header">
-                    <h1 class="text-center">{{ course.name }}</h1></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <p class="lead text-center">{{ course.description }}</p>
-            </div>
-        </div>
-        <hr>
-        </br>
-        <div class="row">
-          
-        </div>
-        <div class="container">
-           
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="page-header">
-                    <h2>План курса</h2></div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="table-responsive">
-                    <table class="table table-striped table-hover table-condensed">
-                        <thead>
-                            <tr>
-                                <th># </th>
-                                <th>Тема </th>
-                                <th>Описание </th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for x in lesson %}
-                            <tr>
-                                <td>{{ x.order }}</td>
-                                <td>{{ x.subject }}</td>
-                                <td>{{ x.description }}</td>
-                            </tr>   
-                            {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
-            </div>
+  <div class="container">
+    <div class="jumbotron">
+        <h1>{{course.name}}</h1>
+      <p>{{course.description}}</p>
+    </div>
 
-</div>
+
+    <div class="jumbotron">
+        <h2>Преподаватели</h2>
+    <div><h4>Учитель</h4>
+
+     <a href="{% url 'coaches:detail' course.coach.id %}">{{course.coach.first_name}} {{course.coach.last_name}}</a>
+    </div>
+    <p>{{course.coach.description}}</p>
+
+   <div><h4>Ассистент</h4>
+
+    <a href="{% url 'coaches:detail' course.assistant.id %}">{{course.assistant.first_name}} {{course.assistant.last_name}}</a>
+    </div>
+    <p>{{course.assistant.description}}</p>
+
+
+  </div>
+
+
+<div class="container">
+    <h2>План курса</h2>
+<div>
+<div class="container">
+      <div class="table-responsive">
+      <table class="table table-striped">
+        <tr>
+          <th>#</th>
+          <th>Тема</th>
+          <th>Описание</th>
+        </tr>
+        {% for i in lesson %}
+        <tr>
+            <td>{{ i.order }}</td>
+      <td>{{ i.subject }}</td>
+      <td>{{ i.description }}</td>
+    </tr>
+    {% endfor %}
+      </table>
+    </div>
+
+
+
+
+
+  
     <div class="container">
     <ul class="pager">
         <li class="next"><a href="{% url 'contact' %}">Next <span class="glyphicon glyphicon-chevron-right"></span></a></li>
