--- a/templates/index.html
+++ b/templates/index.html
@@ -26,9 +26,9 @@
   </div>
 </nav>
     <div class="container">
-        <h1 class="head1">Python&amp;Django from PyBursa</h1>
+        <h1 class="head1">Python&amp;Courses from PyBursa</h1>
         <h2 class="head2 text-right">Description </h2>
-        <p class="lead text_pp text-justify jumbotron">Курс <span class="word_highlight1">Python/Django</span> предназначен для начинающих программистов, которые уже имеют базовые знания <span class="word_highlight2">Python</span>
+        <p class="lead text_pp text-justify jumbotron">Наши курсы, в том числе и <span class="word_highlight1">Python/Django</span> предназначен для начинающих программистов, которые уже имеют базовые знания <span class="word_highlight2">Python</span>
 			и хотят освоить этот язык на профессиональном уровне для web-разработки.</p>
         <h2 class="head2 text-right">Program </h2>
         <p class="lead text_pp2 text-justify jumbotron">В этом курсе акцент сделан на изучение популярного web-фреймворка  <span class="word_highlight2">Django</span>. 
