--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -1,37 +1,9 @@
-{% load staticfiles %}
-<!DOCTYPE html>
-<html>
 
-<head>
-   <meta charset="utf-8">
-	<meta name="description" content="PyBursa">
-	<title>{% block title %}{{ coach.first_name }} {{ scoach.last_name }}{% endblock title %}</title>
-	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-	<link href="{% static 'css/style.css' %}" rel="stylesheet">
-	<script src="{% static 'js/bootstrap.min.js' %}"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-</head>
+{% extends "base.html" %}
+{% block title %}Teachers PyBursa{% endblock title %}
 
-<body>
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'index' %}">PYBURSA <span class="glyphicon glyphicon-education"></span></a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li><a href="{% url 'index' %}">Main</a></li>
-      <li><a href="{% url 'contact' %}">Contacts</a></li>
-      <li><a href="{% url 'students:list_view' %}">Students</a></li>
-      <li><a href="{% url 'results'  %}">Quadratic</a></li>
-    </ul>
-  </div>
-</nav>
-    <div class="container">
-  
-{% block content %}
+{% block content %}  
 
-
-  <!-- Default panel contents -->
 <div class="container">
    	<h2>{{coach.user.first_name}} {{ coach.user.last_name }}</h2>
 <div>
@@ -39,7 +11,7 @@
       <table class="table table-striped">
         <tr>
         	<th>дата рождения</th>
-        	<th>{{coach.date_of_birth}}</th>
+        	<th>{{coach.date_of_birth|date:"d F, Y"}}</th>
         </tr>
         <tr>
             <th>адрес</th>
@@ -82,17 +54,3 @@
 {% endblock content %}
 
 
-</div>
-    <div class="container">
-    <ul class="pager">
-        <li class="next"><a href="{% url 'contact' %}">Next <span class="glyphicon glyphicon-chevron-right"></span></a></li>
-   </ul>	
-    <div>
-    	<div class="panel panel-default text-center">
-            <p class="panel-footer"> © 2016 PyBursa V Pikalova </p>
-        </div>
-    </div>    
-    </div>
-   </body>
-
-</html>
