--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,30 +1,10 @@
+
+{% extends "base.html" %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta name="description" content="Contact">
-	<title>Contact</title>
-	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-	<link href="{% static 'css/style.css' %}" rel="stylesheet">
-	<script src="{% static 'js/bootstrap.min.js' %}"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-	<link href='https://fonts.googleapis.com/css?family=PT+Serif+Caption&subset=latin,cyrillic-ext,latin-ext,cyrillic' rel='stylesheet' type='text/css'>
-</head>
-<body>
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'index' %}">PYBURSA <span class="glyphicon glyphicon-education"></span></a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li><a href="{% url 'index' %}">Main</a></li>
-      <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
-      <li><a href="{% url 'student_list' %}">Students</a></li>
-      <li><a href="{% url 'results'  %}">Quadratic</a></li>
-    </ul>
-  </div>
-</nav>
+{% block title %}Contacts PyBursa{% endblock title %}
+{% block nav_class_contact %}active{% endblock %}
+{% block content %}   
+
 <div class="container">
 <div class="text-center">
 	<h1 class="head1">Contacts</h1>
@@ -71,14 +51,5 @@
     	 </dl>       
 	</div>
 </div>
- <ul class="pager">
-    <li class="previous"><a href="{% url 'index' %}"><span class="glyphicon glyphicon-chevron-left"></span> Previous</a></li>
-    <li class="next"><a href="{% url 'student_list' %}">Next <span class="glyphicon glyphicon-chevron-right"></span></a></li>
- </ul>
- <div class="panel panel-default text-center">
-     <div class="panel-footer"> © 2016 PyBursa V Pikalova</div>
- </div>
-</div>
 
-</body>
-</html>
+{% endblock content %}  
