--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -1,36 +1,13 @@
-{% load staticfiles %}
-<!DOCTYPE html>
-<html>
+{% extends "base.html" %}
+{% block title %}{{ course.name }} details PyBursa{% endblock title %}
 
-<head>
-   <meta charset="utf-8">
-	<meta name="description" content="PyBursa">
-	<title>{% block title %}Course {{ course.name }}{% endblock title %}</title>
-	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-	<link href="{% static 'css/style.css' %}" rel="stylesheet">
-	<script src="{% static 'js/bootstrap.min.js' %}"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-</head>
-
-<body>
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'index' %}">PYBURSA <span class="glyphicon glyphicon-education"></span></a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li><a href="{% url 'index' %}">Main</a></li>
-      <li><a href="{% block course_students %}?course_id={{ course.id }}{% endblock course_students %}">Students</a></li>
-      <li><a href="{% url 'results'  %}">Quadratic</a></li>
-    </ul>
-  </div>
-</nav>
+{% block content %}
   
 
   <div class="container">
     <div class="jumbotron">
-        <h1>{{course.name}}</h1>
-      <p>{{course.description}}</p>
+        <h1>{{ course.name }}</h1>
+      <p>{{ course.description|truncatechars:32 }}</p>
     </div>
 
 
@@ -38,15 +15,15 @@
         <h2>Преподаватели</h2>
     <div><h4>Учитель</h4>
 
-     <a href="{% url 'coaches:detail' course.coach.id %}">{{course.coach.first_name}} {{course.coach.last_name}}</a>
+     <a href="{% url 'coaches:detail' course.coach.id %}">{{ course.coach.first_name }} {{ course.coach.last_name }}</a>
     </div>
-    <p>{{course.coach.description}}</p>
+    <p>{{ course.coach.description }}</p>
 
    <div><h4>Ассистент</h4>
 
-    <a href="{% url 'coaches:detail' course.assistant.id %}">{{course.assistant.first_name}} {{course.assistant.last_name}}</a>
+    <a href="{% url 'coaches:detail' course.assistant.id %}">{{ course.assistant.first_name }} {{ course.assistant.last_name }}</a>
     </div>
-    <p>{{course.assistant.description}}</p>
+    <p>{{ course.assistant.description }}</p>
 
 
   </div>
@@ -73,21 +50,4 @@
       </table>
     </div>
 
-
-
-
-
-  
-    <div class="container">
-    <ul class="pager">
-        <li class="next"><a href="{% url 'contact' %}">Next <span class="glyphicon glyphicon-chevron-right"></span></a></li>
-   </ul>	
-    <div>
-    	<div class="panel panel-default text-center">
-            <p class="panel-footer"> © 2016 PyBursa V Pikalova </p>
-        </div>
-    </div>    
-    </div>
-   </body>
-
-</html>
+{% endblock content %}
