--- a/templates/index.html
+++ b/templates/index.html
@@ -1,47 +1,22 @@
-{% load staticfiles %}
-<!DOCTYPE html>
-<html>
 
-<head>
-   <meta charset="utf-8">
-	<meta name="description" content="PyBursa">
-	<title>PyBursa</title>
-	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-	<link href="{% static 'css/style.css' %}" rel="stylesheet">
-	<script src="{% static 'js/bootstrap.min.js' %}"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-</head>
-
-<body>
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'index' %}">PYBURSA <span class="glyphicon glyphicon-education"></span></a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="{% url 'index' %}">Main</a></li>
-      <li><a href="{% url 'students:list_view' %}">Students</a></li>
-      <li><a href="{% url 'results'  %}">Quadratic</a></li>
-    </ul>
-  </div>
-</nav>
-    <div class="container">
-        <h1 class="head1">Python&amp;Courses from PyBursa</h1>
-        <h2 class="head2 text-right">Description </h2>
-        <p class="lead text_pp text-justify jumbotron">Наши курсы, в том числе и <span class="word_highlight1">Python/Django</span> предназначен для начинающих программистов, которые уже имеют базовые знания <span class="word_highlight2">Python</span>
+{% extends "base.html" %}
+{% block title %}Main PyBursa{% endblock title %}
+{% block nav_class_index %}active{% endblock %}
+{% block content %}
+<div class="container">
+    <h1 class="head1">Python&amp;Django Courses from PyBursa</h1>
+    <h2 class="head2 text-right">Description </h2>
+    <p class="lead text_pp text-justify jumbotron">Курс <span class="word_highlight1">Python/Django</span>, предназначен для начинающих программистов, которые уже имеют базовые знания <span class="word_highlight2">Python</span>
 			и хотят освоить этот язык на профессиональном уровне для web-разработки.</p>
-        <h2 class="head2 text-right">Program </h2>
-        <p class="lead text_pp2 text-justify jumbotron">В этом курсе акцент сделан на изучение популярного web-фреймворка  <span class="word_highlight2">Django</span>. 
-			Используя <span class="word_highlight2">Django</span>, вы сможете значительно ускорить процесс web-разработки, создавать мощные и высоконагрузочные web-приложения.
-		 </p>
-		 <h2 class="head2 text-right">Perspectives</h2>   
+    <h2 class="head2 text-right">Program </h2>
+    <p class="lead text_pp2 text-justify jumbotron">В этом курсе акцент сделан на изучение популярного web-фреймворка  <span class="word_highlight2">Django</span>. 
+			Используя <span class="word_highlight2">Django</span>, вы сможете значительно ускорить процесс web-разработки, создавать мощные и высоконагрузочные web-приложения.</p>
+	<h2 class="head2 text-right">Perspectives</h2>   
 	<div class="lead">
 		<p class="text_pp3">
 			После обучения в этом курсе вы сможете легко претендовать на позицию <span class="word_highlight3">"Junior web developer"</span> <br>в ведущих IT-компаниях.
 		</p>
 	</div>
-    </div>
-<div class="container">
 <h2 class="head2 text-right">Наши курсы</h2>   
                 <div class="table-responsive">
                     <table class="table table-striped table-hover table-condensed">
@@ -54,25 +29,13 @@
                         <tbody>
                             {% for x in courses %}
                             <tr>
-                                <td><a href="{% url 'courses:detail' x.id %}"><strong>{{ x.name }}</strong></a></td>
-                                <td>{{ x.short_description }}</td>
+                                <td><a href="{% url 'courses:detail' x.id %}"><strong>{{ x.name|upper }}</strong></a></td>
+                                <td>{{ x.short_description|title }}</td>
                             </tr>   
                             {% endfor %}
                         </tbody>
                     </table>
                 </div>
            
-</div>>
-    <div class="container">
-    <ul class="pager">
-        <li class="next"><a href="{% url 'contact' %}">Next <span class="glyphicon glyphicon-chevron-right"></span></a></li>
-   </ul>	
-    <div>
-    	<div class="panel panel-default text-center">
-            <p class="panel-footer"> © 2016 PyBursa V Pikalova </p>
-        </div>
-    </div>    
-    </div>
-   </body>
-
-</html>
+</div>
+{% endblock content %}   
