--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -1,38 +1,9 @@
-{% load staticfiles %}
-<!DOCTYPE html>
-<html>
+{% extends "base.html" %}
+{% block title %}Student details PyBursa{% endblock title %}
 
-<head>
-   <meta charset="utf-8">
-	<meta name="description" content="PyBursa">
-	<title>{% block title %}{{ student.name }} {{ student.surname }}{% endblock title %}</title>
-	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-	<link href="{% static 'css/style.css' %}" rel="stylesheet">
-	<script src="{% static 'js/bootstrap.min.js' %}"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-</head>
+{% block content %}  
 
-<body>
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'index' %}">PYBURSA <span class="glyphicon glyphicon-education"></span></a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li><a href="{% url 'index' %}">Main</a></li>
-      <li><a href="{% url 'contact' %}">Contacts</a></li>
-      <li  class="active"><a href="{% url 'students:list_view' %}">Students</a></li>
-      <li><a href="{% url 'results'  %}">Quadratic</a></li>
-    </ul>
-  </div>
-</nav>
-    <div class="container">
   
- <ol class="breadcrumb">
-        <li><a href="{% url 'index' %}"><span>/ Main</span></a></li>
-        <li><a href="{% url 'students:list_view' %}"><span>Students </span></a></li>
-        <li><span>Student details</span></a></li>
-    </ol>
     <div class="container">
         <div class="row">
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
@@ -83,20 +54,7 @@
                 </div>
             </div>
         </div>
-    </div>
 
 
-</div>
-    <div class="container">
-    <ul class="pager">
-        <li class="next"><a href="{% url 'contact' %}">Next <span class="glyphicon glyphicon-chevron-right"></span></a></li>
-   </ul>	
-    <div>
-    	<div class="panel panel-default text-center">
-            <p class="panel-footer"> © 2016 PyBursa V Pikalova </p>
-        </div>
-    </div>    
-    </div>
-   </body>
 
-</html>
+{% endblock content %}
