--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -1,40 +1,7 @@
-{% load staticfiles %}
-<!DOCTYPE html>
-<html>
-
-<head>
-   <meta charset="utf-8">
-	<meta name="description" content="PyBursa">
-	<title>{% block title %}Students Course {% endblock title %}</title>
-	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-	<link href="{% static 'css/style.css' %}" rel="stylesheet">
-	<script src="{% static 'js/bootstrap.min.js' %}"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-</head>
-
-<body>
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'index' %}">PYBURSA <span class="glyphicon glyphicon-education"></span></a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li><a href="{% url 'index' %}">Main</a></li>
-      <li><a href="{% url 'contact' %}">Contacts</a></li>
-      <li class="active"><a href="{% url 'students:list_view' %}">Students</a></li>
-      <li><a href="{% url 'results'  %}">Quadratic</a></li>
-    </ul>
-  </div>
-</nav>
-  
-   <ol class="breadcrumb">
-        <li><a href="{% url 'index' %}"><span>/ Main</span></a></li>
-        <li><a href="{% url 'students:list_view' %}"><span>Students </span></a></li>
-    </ol>
-    {% block content %}
-
-  <!-- Default panel contents -->
-
+{% extends "base.html" %}
+{% block title %}Main PyBursa{% endblock title %}
+{% block nav_class_students %}active{% endblock %}
+{% block content %}
     <h2 id = "header_table">Список студентов</h2>
         <div class="table-responsive">
             <table class="table table-striped">
@@ -59,20 +26,5 @@
                 {% endfor %}
             </table>   
         </div>
+{% endblock content %}         
 
-    {% endblock content %}         
-
-
-    <div class="container">
-    <ul class="pager">
-        <li class="next"><a href="{% url 'contact' %}">Next <span class="glyphicon glyphicon-chevron-right"></span></a></li>
-   </ul>	
-    <div>
-    	<div class="panel panel-default text-center">
-            <p class="panel-footer"> © 2016 PyBursa V Pikalova </p>
-        </div>
-    </div>    
-    </div>
-   </body>
-
-</html>
