--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -1,30 +1,28 @@
+{% extends "base.html" %}
+
+
+{% block title %}Quadratic Equation{% endblock title %}
+
+
+{% block nav_class_contact %}active{% endblock %}
+
+
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Quadratic</title>
-    <!-- Bootstrap -->
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    
-  </head>
-  <body>
-    
-    <div class ="container">
-	  <p>Квадратоне уравнение a*x*x + b*x + c = 0</p>  
-    <ul>    
-      <li>a = 1</li>
-      <li>b = 2</li>    
-      <li>c = 3</li>
-    </ul>    
+
+
+{% block content %}
+    <div class="container">
+    <div class="container">
+        <p>Квадратное уравнение a*x*x + b*x + c = 0</p>
+          <form method="get">
+            {{ form.as_p }}
+            <input type="submit" value="Решить"/>
+    <br />
+    <br />
+          </form>
+        <p>{{disc.message}}{{disc.value}}</p>
+        <p>{{text_result.message}}{{text_result.value}}</p>
+        
     </div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{% static '/js/bootstrap.js' %}"></script>
-  </body>
-</html>
+    <hr>
+{% endblock content %}
